Fix KB left blank and align sidebar padding

--- a/_sass/minimal-mistakes/custom.scss
+++ b/_sass/minimal-mistakes/custom.scss
@@ -647,6 +647,12 @@ html {
   padding-right: 1rem;
 }
 
+.kb-home .page {
+  float: none !important;
+  width: 100% !important;
+  padding-right: 0 !important;
+}
+
 .kb-home .page__content {
   width: 100%;
 }
@@ -739,6 +745,10 @@ body {
   max-height: calc(100vh - 0.5rem);
   overflow: auto;
   padding-right: 0.25rem;
+}
+
+.kb-index__sidebar-inner {
+  padding-top: 0.25rem;
 }
 
 @include breakpoint(max-width $large - 1px) {
